--- a/index copy.html
+++ b/index copy.html
@@ -4,8 +4,6 @@
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--La meta description est un bref résumé d'une page web, généralement de 150 à 160 caractères, conçu pour apparaître dans les résultats des moteurs de recherche afin d'inciter les utilisateurs à cliquer en leur donnant une idée claire du contenu de la page. -->
-<meta name= "description" content= "Un jour je serai le meilleur dresseur, Je me battrai sans répit, Je ferai tout pour être vainqueur, Et gagner les défis Je parcourrai la terre entière, Traquant avec espoir, Les Pokémon et leurs mystères, Le secret de leurs pouvoirs">
 
 <link rel="stylesheet" href="w3.css">
 <link rel="stylesheet" href="media.css">
@@ -17,7 +15,7 @@
 <body>
 
 <div class="w3-display-container" style="margin-bottom:50px">
-  <img src="img/main_HOME.jpg" width="1024" height="768" style="width:100%">
+  <img src="img/main_HOME.jpg" style="width:100%">
   <div class="w3-display-bottomleft w3-container w3-amber w3-hover-orange w3-hide-small"
    style="bottom:10%;opacity:0.7;width:70%">
   <h2><b>Travel Agency (Demo Website)</b></h2>
